// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundBrowserEventManager times out if no ApplicationListener registers in time 1`] = `
[
  "Error while processing browser event-type event: ",
  "[deferred browser event: {"eventType":"event-type","eventArgs":[]}]",
]
`;

exports[`BackgroundBrowserEventManager times out late-registered Promise-based ApplicationListeners 1`] = `
[
  "Error while processing browser event-type event: ",
  "[deferred browser event: {"eventType":"event-type","eventArgs":[]}]",
]
`;

exports[`BackgroundBrowserEventManager times out pre-registered Promise-based ApplicationListeners 1`] = `
[
  "Error while processing browser event-type event: ",
  "[browser event listener: {"eventType":"event-type","eventArgs":[]}]",
]
`;
